--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -74,9 +74,9 @@ body {
     background: rgb(170, 116, 124);
     text-align: center;
     margin-bottom: 0em;
+    font-size: 0px;
 }
 .msg2 p, .msg2 i{
-    font-size: 18px;
     color: white;
 }
 .msg2 i {
@@ -86,6 +86,7 @@ body {
     overflow: auto;
     margin: auto;
     top: 0; left: 0; bottom: 0; right: -250px;
+    overflow: hidden;
 }
 .errorMsg {
     display: none;
@@ -781,6 +782,7 @@ button {
         background: linear-gradient(90.05deg, #D91821 -5.66%, #FB0F1A 115.63%);
         width: 100%;
         padding: 1.2em 1em;
+        z-index: 999;
     }
     .l-section {
         margin-top: 50px;
