--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -184,7 +184,7 @@ button {
         width: 100%;
         height: 100vh;
         background: white;
-        transition: 0.5s top;
+        transition: .8s top;
     }
     .show-menu {
         top: 0;
@@ -422,10 +422,11 @@ button {
     }
     .r-container {
         display: flex;
-        flex-direction: column;
-        gap: 2em;
+        /* flex-direction: column; */
+        flex-wrap: nowrap;
+        gap: 1em;
         margin-top: 20px;
-        margin-bottom: 84px;
+        /* margin-bottom: 84px; */
         overflow: hidden;
     }
     .chart {
@@ -515,6 +516,9 @@ button {
     .redd {
         color: #D91821;
         font-size: 30px;
+    }
+    .redD {
+        color: #D91821;
     }
     ._icon {
         width: 50%;
@@ -973,12 +977,19 @@ button {
         margin: 0 auto;
     }
     .or-flex2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 1em;
         width: 100%;
         margin: 0 auto;
+    }
+    .or-payment {
+        box-sizing: border-box;
+        width: 100%;
+        padding: .5em;
+        border: 1px solid #636363;
+        box-shadow: none;
+        display: flex;
+        justify-content: space-between;
+        background: white;
+        margin-bottom: 1em;
     }
     .or-type-t {
         color: #525252;
@@ -1078,21 +1089,54 @@ button {
         justify-content: space-between;
         background: linear-gradient(90.05deg, #D91821 -5.66%, #FB0F1A 115.63%);
         padding: 1em;
-        width: 60%;
         position: fixed;
+        width: 60%;
         top: 75px;
         right: -1000px;
         z-index: 999;
         transition: 0.5s right;
     }
-    
+    .blurr {
+        position: fixed;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background: black;
+        z-index:1001;
+        -moz-opacity: 0.8;
+        opacity:.80;
+        filter: alpha(opacity=80);
+        overflow: hidden;
+        display: none;
+    }   
+    .success2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 80%;
+        transform: translate(-50%, -50%);
+        margin: 0 auto;
+        background: white;
+        border-radius: 1em;
+        padding: 1em;
+        z-index:1002;
+        display: none;
+    }
     .success p {
         color: white;
-        font-size: 12px;
+        font-size: 16px;
     }
-    .success i {
+    .success2 p {
+        text-align: center;
+        line-height: 2em;
+        color: black;
+        font-size: 18px;
+    }
+    .success i{
         color: white;
         cursor: pointer;
+        font-size: 16px;
     }
     .s-container {
         width: 90%;
@@ -1217,9 +1261,16 @@ button {
         padding: 5px 0px 40px 0px;
     }
     .or-payment img {
-        width: 20px;
+        width: 30px;
         height: auto;
         margin-top: .5em;
+        flex-grow: 1;
+        flex-basis: 0;
+    }
+    .imgs {
+        display: flex;
+        justify-content: space-between;
+        gap: .5em;
     }
     .grBa {
         flex-grow: 1;
@@ -1227,6 +1278,35 @@ button {
     }
     .part {
         width: 100%;
+    }
+    .headerNav {
+        display: flex;
+        justify-content: space-between;
+        gap: .1em;
+    }
+    .headerNav a {
+        color: white;
+    }
+    .headerNav a:hover {
+        background: linear-gradient(90.05deg, #D91821 -5.66%, #FB0F1A 115.63%);
+    }
+    .mHeaderNav {
+        border-radius: 0;
+        box-shadow: none;
+        flex-grow: 1;
+        flex-basis: 0;
+        background: #C4C4C4;
+        text-align: center;
+    }
+    .topH {
+        margin-top: 3.2em;
+    }
+    .or-button button {
+        padding: 1em;
+        width: 100%;
+    }
+    .headerNav a {
+        font-size: 12px;
     }
 }
 @media only screen and (min-width: 768px) {
@@ -1427,7 +1507,7 @@ button {
     .left {
         font-size: 15px;
     }
-
+    
     /* CONTACT US */
     .Myform {
         max-width: 70%;
@@ -1454,8 +1534,15 @@ button {
         margin: 0 auto;
     }
     .or-flex2 {
+        display: flex;
         flex-direction: row;
+        justify-content: space-between;
+        gap: 1em;
         width: 100%;
+        margin: 0 auto;
+    }
+    .or-payment {
+        margin-bottom: 0em;
     }
     .or-type-t {
         color: #525252;
@@ -1488,7 +1575,10 @@ button {
     #more, #g-home {
         padding: 1.5em;
     }
-
+    .success2 {
+        padding: 5em;
+        width: 50%;
+    }
 }
 @media only screen and (min-width: 1024px) {
     .navbar {
@@ -1722,10 +1812,15 @@ button {
     .proceed p {
         font-size: 16px;
     }
-}
-@media only screen and (min-width: 1440px) {
-    .navbar, .home, .contact {
-        max-width: 60%;
-        margin: 0 auto;
+    .topH {
+        margin-top: 5em;
     }
+    .or-button button {
+        padding: 1.5em;
+        width: 100%;
+    }
+    .headerNav a {
+        font-size: 15px;
+    }
+
 }
